k8s/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: flask-demo-service
spec:
  selector:
    app: flask-demo-deployment
  ports:
    - name: flask_port
      protocol: TCP
      port: 80
      targetPort: 5000
